Visuel_Admin_GestionUtilisateur
Ajout des pages de visu pour la fonctionnalité Gestion des utilisateurs
pour l'administrateur

--- a/ApplicationLeclour/vues/administrateur/gestionUtilisateur_Select.html
+++ b/ApplicationLeclour/vues/administrateur/gestionUtilisateur_Select.html
@@ -6,7 +6,7 @@
 	<body>
 		<div>
 
-			<H1>Création d'un utilisateur</H1>
+			<H1>Gestion des utilisateurs</H1>
 				
 			<div>
 				<form id="formulaire" action="gestionUtilisateur_Confirm.html">
