et encore commit chsais pas pkoi

--- a/ApplicationLeclour/vues/administrateur/gestionUtilisateur.html
+++ b/ApplicationLeclour/vues/administrateur/gestionUtilisateur.html
@@ -34,7 +34,7 @@
 						<TH> Entité de rattachement </TH>
 						<TH> Profil </TH>						
 					</TR> 
-					<form id="radioSelectionUtilisateur" action="gestionUtilisateur_Select.html" 
+					<form id="radioSelectionUtilisateur" action="gestionUtilisateur_Select.html">
 					<TR> 
 						<TD style=" border:0;" ><input type="radio" value="idUtilisateur" name="selectionUtilisateur"></TD>
 						<TD> Dupont </TD> 
